Final fix for css whitespace and br formatting

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -38,6 +38,8 @@
 			-webkit-flex: 1;
 			flex: 1;
 			padding: 0 20px;
+                            min-width: 0px;
+
 		}
 	}
 
