--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -94,7 +94,7 @@ section + section {
 }
 
 .shell-wrap {
-  max-width: 550px;
+    max-width: 550px;
   margin: 20px auto 0 auto;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -137,7 +137,8 @@ section + section {
   color: #FFFFFF;
   font: 0.8em 'Andale Mono', Consolas, 'Courier New';
   line-height: 1.6em;
-  overflow: auto;
+  overflow: hidden;
+  white-space: nowrap;
 
   -webkit-border-bottom-right-radius: 3px;
   -webkit-border-bottom-left-radius: 3px;
@@ -158,4 +159,5 @@ section + section {
 .shell-body li {
   position: relative;
   padding: 0 0 0 15px;
+  white-space: nowrap;
 }
